# tmuxai

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-TW.md
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  fanout.rs  fleet_status.rs  main.rs  run.rs  watch.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs  server.rs  session_mgr.rs
crates/parser/: Cargo.toml
crates/parser/src/: classifier.rs  events.rs  fsm.rs  learner.rs  lib.rs  profile.rs  question.rs  status_bar.rs
crates/parser/tests/: integration.rs  orchestrator.rs
crates/parser/tests/fixtures/: brainstorm-turn1.txt  claude-multipara.txt  codex-0.137-session.txt  gemini-0.45-insert.txt  gemini-0.46-normal.txt  gemini-yolo-ready.txt  grok-nothink-noblank.txt  grok-prompt-internal-blank.txt  grok-session-nothink.txt  grok-session.txt  kiro-classic-2.5.1.txt  simple-response.txt
crates/tmux-io/: Cargo.toml
crates/tmux-io/examples/: live_session.rs
crates/tmux-io/src/: capture.rs  human_input.rs  lib.rs  pipe_pane.rs  send_keys.rs  session.rs
crates/tmux-io/tests/: modes.rs  reap.rs
profiles/: claude-code.toml  codex-cli.toml  deepseek-cli.toml  gemini-cli.toml  glm-cli.toml  grok-cli.toml  kimi-cli.toml  kiro-cli.toml
scripts/: fanout-demo.sh  gemini-multiturn-demo.sh
