[package]
name = "tmux-ai-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "tmuxai"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tmux-ai-parser = { path = "../parser" }
libc = "0.2"
